--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,9 +5,137 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Homework | Week 0</title>
   <link rel="stylesheet" href="assets/styles/styles.css" />
+  <link rel="shortcut icon" type="image/png" href="https://img.icons8.com/bubbles/50/000000/restaurant.png">
 </head>
 
 <body>
-  <div class=""></div>
+  <div class="container">
+    <nav>
+      <ul class="nav-menu">
+        <li class="nav-element"><a href="#">Tacos</a></li>
+        <li class="nav-element"><a href="#">Beers</a></li>
+        <li class="nav-element"><a href="#">Wines</a></li>
+        <li class="nav-element"><a href="#">Desserts</a></li>
+        <li class="nav-element"><a href="#">Reservations</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="container">
+    <div class="header-section">
+      <div class="img-section">
+        <img src="https://cpb-us-e1.wpmucdn.com/www.thelantern.com/dist/c/1/files/2020/05/IMG_9847.jpg" alt="">
+        <div class="image-description">
+          <h2>Terry's Taco Joint</h2>
+          <p>Pretty Good Tacos!</p>
+        </div>
+      </div>
+      <div class="price-section">
+        <div class="price-description">
+          <h2>
+            $1.99
+          </h2>
+          <p>Tacos</p>
+        </div>
+      </div>
+      <div class="price-section">
+        <div class="price-description">
+          <h2>
+            $3.99
+          </h2>
+          <p>Kombucha</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="product-section">
+      <div class="product">
+        <img src="https://img.icons8.com/doodle/48/000000/taco.png" />
+        <h3>Tacos</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="product">
+        <img src="https://img.icons8.com/doodle/48/000000/beer--v1.png" />
+        <h3>Beer</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="product">
+        <img src="https://img.icons8.com/doodle/48/000000/wine-glass.png" />
+        <h3>Wine</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="product">
+        <img src="https://img.icons8.com/doodle/48/000000/boombox.png" />
+        <h3>Music</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="featured-product">
+      <img src="http://www.pngmart.com/files/5/Quesadilla-PNG-Free-Download.png" alt="Quesadilla">
+      <div class="featured-product--detail">
+        <h2>Featured Quesadilla</h2>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Consectetur adipiscing elit.</p>
+        <button class="btn">
+          Learn More
+          <i class="arrow right"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="section-title">
+      <div class="gradient-left"></div>
+      <h3>Instant Grams</h3>
+      <div class="gradient-right"></div>
+    </div>
+    <div class="galery">
+      <div class="galery-image">
+        <img src="https://images.wallpaperscraft.com/image/coffee_mug_chair_124443_1280x720.jpg" alt="">
+      </div>
+      <div class="galery-image">
+        <img src="https://images.wallpaperscraft.com/image/orange_ice_mint_139564_1280x720.jpg" alt="">
+      </div>
+      <div class="galery-image">
+        <img src="https://images.wallpaperscraft.com/image/lemon_fruit_citrus_198765_1280x720.jpg" alt="">
+      </div>
+      <div class="galery-image">
+        <img
+          src="https://images.wallpaperscraft.com/image/raspberries_blueberries_currants_red_berries_lemon_lime_citrus_fruit_jam_jar_spoon_94014_1280x720.jpg"
+          alt="">
+      </div>
+      <div class="galery-image">
+        <img src="https://images.wallpaperscraft.com/image/apples_branch_leaves_background_85594_1280x720.jpg" alt="">
+      </div>
+      <div class="galery-image">
+        <img
+          src="https://images.wallpaperscraft.com/image/dessert_cake_cake_raspberries_sweet_fruit_blueberry_black_currant_food_cream_93481_1280x720.jpg"
+          alt="">
+      </div>
+      <div class="galery-image">
+        <img src="https://images.wallpaperscraft.com/image/plum_branch_fruit_ripe_109216_1280x720.jpg" alt="">
+      </div>
+      <div class="galery-image">
+        <img src="https://images.wallpaperscraft.com/image/ice_cream_cone_lavender_dessert_101521_1280x720.jpg" alt="">
+      </div>
+      <div class="galery-image">
+        <img src="https://images.wallpaperscraft.com/image/lemon_glass_water_spray_106738_1280x720.jpg" alt="">
+      </div>
+      <div class="galery-image">
+        <img src="https://images.wallpaperscraft.com/image/ice-cream_blackberry_berry_dessert_5469_1280x720.jpg" alt="">
+      </div>
+      <div class="galery-image">
+        <img
+          src="https://images.wallpaperscraft.com/image/strawberry_drink_fruit_tea_carafe_glass_drink_109384_1280x720.jpg"
+          alt="">
+      </div>
+      <div class="galery-image">
+        <img src="https://images.wallpaperscraft.com/image/avocado_fruit_stone_107922_1280x720.jpg" alt="">
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
