[FIX] broken url

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </div>
   <div class="container">
     <div class="featured-product">
-      <img src="http://www.pngmart.com/files/5/Quesadilla-PNG-Free-Download.png" alt="Quesadilla">
+      <img src="https://res.cloudinary.com/dqaav1s3t/image/upload/v1624250528/Web/Quesadilla-PNG-Free-Download_q2zsc3.png" alt="Quesadilla">
       <div class="featured-product--detail">
         <h2>Featured Quesadilla</h2>
         <p>Lorem ipsum dolor sit amet.</p>
